add day of week and cssStyle to reservation type